--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "browserify-inspect",
+  "name": "browserify-util-inspect",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "lint": "eslint ."
+    "pretest": "npm run build",
+    "clone": "git clone --depth 1 --branch v12.16.1 https://github.com/nodejs/node.git node",
+    "test": "mocha index.spec.js",
+    "lint": "eslint .",
+    "build": "node scripts/build.js"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +17,15 @@
     "node": ">= 10"
   },
   "devDependencies": {
+    "browserify": "^16.5.0",
+    "browserify-derequire": "^1.0.1",
     "eslint": "^6.8.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-jest": "^23.8.0",
+    "eslint-config-mongodb-js": "^5.0.3",
+    "eslint-plugin-chai-friendly": "^0.5.0",
+    "eslint-plugin-mocha": "^6.3.0",
     "eslint-plugin-node": "^11.0.0",
-    "jest": "^25.1.0"
+    "mocha": "^7.0.1",
+    "pathmodify": "^0.5.0",
+    "prependify": "^1.3.0"
   }
 }
